--- a/Login/Web.config
+++ b/Login/Web.config
@@ -11,7 +11,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
 	<connectionStrings>
-		<add name="MyConnectionString" connectionString="server=localhost;port=3306;user=root;password=YourPassword;database=crud" />
+		<add name="MySqlConnection" connectionString="server=localhost;port=3306;user=root;password='';database=crud" providerName="MySql.Data.MySqlClient" />
 	</connectionStrings>
 
 	<system.web>
