--- a/ZeroHunger/ZeroHunger.csproj
+++ b/ZeroHunger/ZeroHunger.csproj
@@ -213,6 +213,8 @@
       <DependentUpon>Model1.edmx</DependentUpon>
     </Content>
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
+    <Content Include="Scripts\showRequest.js" />
+    <Content Include="Scripts\requestpickup.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
     <Content Include="Scripts\jquery-3.4.1.slim.js" />
