--- a/ZeroHunger/ZeroHunger.csproj
+++ b/ZeroHunger/ZeroHunger.csproj
@@ -137,6 +137,7 @@
     <Compile Include="DTO\Data_HistoryDTO.cs" />
     <Compile Include="DTO\LoginDTO.cs" />
     <Compile Include="DTO\ResturantDTO.cs" />
+    <Compile Include="DTO\UserDTO.cs" />
     <Compile Include="EF\Collect_Request.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -199,6 +200,7 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Scripts\Assign.js" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.esm.js" />
@@ -213,6 +215,8 @@
       <DependentUpon>Model1.edmx</DependentUpon>
     </Content>
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
+    <Content Include="Scripts\change.js" />
+    <Content Include="Scripts\Decline.js" />
     <Content Include="Scripts\showRequest.js" />
     <Content Include="Scripts\requestpickup.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
@@ -243,6 +247,8 @@
     <Content Include="Views\Admin\Admin.cshtml" />
     <Content Include="Views\Employee\Employee.cshtml" />
     <Content Include="Views\Resturant\Resturant.cshtml" />
+    <Content Include="Views\Admin\Assign.cshtml" />
+    <Content Include="Views\Admin\Decline.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
