--- a/ZeroHunger/ZeroHunger.csproj
+++ b/ZeroHunger/ZeroHunger.csproj
@@ -216,6 +216,7 @@
     </Content>
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\change.js" />
+    <Content Include="Scripts\Datahistory.js" />
     <Content Include="Scripts\Decline.js" />
     <Content Include="Scripts\showRequest.js" />
     <Content Include="Scripts\requestpickup.js" />
@@ -248,7 +249,6 @@
     <Content Include="Views\Employee\Employee.cshtml" />
     <Content Include="Views\Resturant\Resturant.cshtml" />
     <Content Include="Views\Admin\Assign.cshtml" />
-    <Content Include="Views\Admin\Decline.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
