brought huge changes

--- a/GNIS/BLL/BLL.csproj
+++ b/GNIS/BLL/BLL.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper, Version=10.0.0.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\Meeting_Module\packages\AutoMapper.10.0.0\lib\net461\AutoMapper.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -41,14 +44,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="DTO\Corporate_CustomerDTO.cs" />
+    <Compile Include="DTO\Individual_CustomerDTO.cs" />
+    <Compile Include="DTO\Product_ServiceDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\Corporate_Service.cs" />
+    <Compile Include="Services\Individual_Service.cs" />
+    <Compile Include="Services\Meetings_Minutes_Details_Services.cs" />
+    <Compile Include="Services\Meeting_Minutes_Master_Services.cs" />
+    <Compile Include="Services\Product_Service.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DAL\DAL.csproj">
       <Project>{b4b59bcb-a935-4bdb-b5af-11ac47283a6e}</Project>
       <Name>DAL</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
