--- a/GNIS/Meeting_Module/Web.config
+++ b/GNIS/Meeting_Module/Web.config
@@ -61,7 +61,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="MeetContext" connectionString="server=DESKTOP-5NMO71P\SQLEXPRESS;initial catalog=Meeting;integrated security=true;" providerName="System.Data.SqlClient" />
+    <add name="MeetContext" connectionString="server=DESKTOP-DAV0IAP\SQLEXPRESS;initial catalog=Meeting;integrated security=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <providers>
