--- a/Login/packages.config
+++ b/Login/packages.config
@@ -15,7 +15,7 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net472" />
   <package id="Microsoft.Bcl.HashCode" version="1.1.0" targetFramework="net472" />
-  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="4.1.0" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
   <package id="Microsoft.EntityFrameworkCore" version="3.1.10" targetFramework="net472" />
   <package id="Microsoft.EntityFrameworkCore.Abstractions" version="3.1.10" targetFramework="net472" />
@@ -35,6 +35,7 @@
   <package id="Microsoft.Extensions.Options" version="3.1.10" targetFramework="net472" />
   <package id="Microsoft.Extensions.Primitives" version="3.1.10" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
+  <package id="Microsoft.Net.Compilers" version="4.2.0" targetFramework="net472" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="MySql.Data" version="8.0.22" targetFramework="net472" />
