--- a/Mini Accounting Management System/appsettings.json
+++ b/Mini Accounting Management System/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-5NMO71P\\SQLEXPRESS;Initial Catalog=Accounting;Integrated Security=True;Trust Server Certificate=True"
+  }
 }
