--- a/Mini Accounting Management System/Mini Accounting Management System.csproj
+++ b/Mini Accounting Management System/Mini Accounting Management System.csproj
@@ -8,6 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Helper\JLINE.cs" />
+    <Compile Remove="Helper\PLINE.cs" />
+    <Compile Remove="Helper\RLINE.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.16" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.11" />
